--- a/javascript/flexBox.css
+++ b/javascript/flexBox.css
@@ -1,60 +1,78 @@
 .container {
-    background: rgb(241, 241, 103);
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    /* flex-direction: row-reverse; */
-    /* flex-direction: column; */
-    /* flex-direction: column-reverse; */
-    /* flex-wrap: wrap; */
-    /* flex-wrap: wrap-reverse; */
-    flex-wrap: nowrap;
-    /* flex-flow: column wrap; */
-    /* flex-flow: column nowrap; */
-    justify-content: flex-start;
-    /* justify-content: flex-end; */
-    /* justify-content: center; */
-    /* justify-content: space-around; */
-    /* justify-content: space-evenly; */
-    /* justify-content: space-between; */
-<<<<<<< HEAD
-    justify-content: space-around;   
-=======
-    
-    /* align-items: center; */
-    align-items: baseline;
-    align-content: space-between;
-    /* align-content: center; */
+  background: rgb(241, 241, 103);
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  /* flex-direction: row-reverse; */
+  /* flex-direction: column; */
+  /* flex-direction: column-reverse; */
+  /* flex-wrap: wrap; */
+  /* flex-wrap: wrap-reverse; */
+  flex-wrap: nowrap;
+  /* flex-flow: column wrap; */
+  /* flex-flow: column nowrap; */
+  justify-content: flex-start;
+  /* justify-content: flex-end; */
+  /* justify-content: center; */
+  /* justify-content: space-around; */
+  /* justify-content: space-evenly; */
+  /* justify-content: space-between; */
 
-    
->>>>>>> ad57c1212ff6218ae5d64d062bcc209d1d403342
+  /* align-items: center; */
+  align-items: baseline;
+  align-content: space-between;
+  /* align-content: center; */
 }
 
 .item {
-    width: 40px;
-    height: 40px;
-    border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
 }
-.item1 { background: brown;
-    /* flex-grow: 1;
-    flex-shrink: 2; */
-    /* padding: 20px; */
-    flex-basis: 60%;
-    /* order: 3; */
+.item1 {
+  background: brown;
+  /* order: 3; */
+  /* flex-grow: 2; */
+  /* flex-shrink: 2; */
+  /* padding: 20px; */
+  flex-basis: 60%;
 }
-.item2 { background: rgb(165, 42, 124);
-    /* order: 1; */
-    flex-basis: 30%;
-    align-self: center;
+.item2 {
+  background: rgb(165, 42, 124);
+  /* order: 1; */
+  /* flex-grow: 1; */
+  /* flex-shrink: 1; */
+  flex-basis: 30%;
+  align-self: center;
 }
-.item3 { background: rgb(136, 42, 165);
-    /* order: 2; */
-    flex-basis: 10%;
+.item3 {
+  background: rgb(136, 42, 165);
+  /* order: 2; */
+  /* flex-grow: 1; */
+  /* flex-shrink: 2; */
+  flex-basis: 10%;
 }
-.item4 { background: rgb(116, 42, 165);}
-.item5 { background: rgb(65, 42, 165);}
-.item6 { background: rgb(42, 54, 165);}
-.item7 { background: rgb(42, 147, 165);}
-.item8 { background: rgb(42, 165, 155);}
-.item9 { background: rgb(42, 165, 52);}
-.item10 { background: rgb(118, 165, 42);}
+.item4 {
+  background: rgb(116, 42, 165);
+}
+.item5 {
+  background: rgb(65, 42, 165);
+}
+.item6 {
+  background: rgb(42, 54, 165);
+}
+.item7 {
+  background: rgb(42, 147, 165);
+}
+.item8 {
+  background: rgb(42, 165, 155);
+}
+.item9 {
+  background: rgb(42, 165, 52);
+}
+.item10 {
+  background: rgb(118, 165, 42);
+}
+.loveBox {
+  background: rgb(165, 42, 124);
+}
